collection/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aziz-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - lab-kube.azizpunya.com
    secretName: tls-secret
  rules:
  - host: lab-kube.azizpunya.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aziz-service
            port:
              number: 80
